src/main/java/org/example/breakoutdrop/Errors/Client/IncorrectURL.java
package org.example.breakoutdrop.Errors.Client;

public class IncorrectURL extends RuntimeException {
    public IncorrectURL(String message) {
        super(message);
    }
}
